crates/wac-parser/tests/resolution/fail/missing-err-result-type/foo/bar.wat
(component
  (instance (import "x")
    (export "f" (func (result (result (error string)))))
  )
)
